dev/ingress/fake86-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fake86-ingress
  namespace: fake86-ns
spec:
  ingressClassName: nginx
  rules:
    - host: fake86.dolphin.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fake86-service
                port:
                  number: 20086
